# tucker-gemini-GPT-

./: ARTIFACT_PROVENANCE.md  KRAKOA_PROTOCOL.md  KRAKOA_WIRING.md  LINEAGE.md  READMENEW.md  package.json
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  main.rs
cli/src/chat/: mod.rs
cli/src/council/: mod.rs  models.rs  synthesis.rs
cli/src/governance/: mod.rs
cli/src/sync/: mod.rs
cli/src/uws/: mod.rs
docs/: tucker-pendragon-protocols-newdeal2.md
interfaces/pendragon/: App.tsx  index.html  metadata.json  package.json  tsconfig.json  types.ts
interfaces/pendragon-claude/: App.tsx  index.html  metadata.json  package.json  tsconfig.json  types.ts  vite.config.ts
interfaces/pendragon-claude/components/: AlignmentChart.tsx  ChatWindow.tsx  CouncilPanel.tsx  NexusSimulation.tsx  PhilosophyPanel.tsx  SystemBlueprint.tsx
interfaces/pendragon-claude/services/: claude.ts  council.ts
interfaces/pendragon/components/: AlignmentChart.tsx  ChatWindow.tsx  NexusSimulation.tsx  PhilosophyPanel.tsx  SystemBlueprint.tsx
interfaces/pendragon/services/: gemini.ts
src/: App.tsx  constants.ts  index.html  metadata.json  types.ts
src/components/: Architecture.tsx  ConfigPanel.tsx  Metrics.tsx  Sidebar.tsx  Terminal.tsx
src/services/: geminiService.ts
vault/: V3_MANIFEST.md
